# grades_detection

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
grades_detection/: __init__.py  dataset.py  explore.py  features.py  plots.py
grades_detection/modeling/: predict.py  train.py
notebooks/: experiment0.ipynb
