[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "grades_detection"
version = "0.0.1"
description = "Reads scanned test images and extracts students\u2019 names, IDs, and grades using OCR."
authors = [
  { name = "Soroush Dehkordi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["grades_detection"]
include = ["pyproject.toml", "grades_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["grades_detection"]
force-sort-within-sections = true


[tool.poetry.dependencies]
torch = {allow-prereleases = true}
torchvision = {allow-prereleases = true}
torchaudio = {allow-prereleases = true}
